--- a/src/app/informacion/informacion.component.html
+++ b/src/app/informacion/informacion.component.html
@@ -1,27 +1,109 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img src="/src/assets/logo_gacelas.jpeg" alt="">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <img src="assets/logo_gacelas.jpeg" class="small" alt="">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link active" href="#">Quienes somos</a>
-      <a class="nav-item nav-link active" href="#">Servicios</a>
-      <a class="nav-item nav-link active " href="#">Noticias</a>
-      <a class="nav-item nav-link active" href="#">Contacto</a>
+      <a class="nav-item nav-link active" href="#quienessomos">Quienes somos</a>
+      <a class="nav-item nav-link active" href="#servicios">Servicios</a>
+      <a class="nav-item nav-link active " href="#noticias">Noticias</a>
+      <a class="nav-item nav-link active" href="#contacto">Contacto</a>
     </div>
   </div>
 </nav>
+
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-light">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
+      featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   </div>
 </div>
 
-<div class="container">
+<section id="quienessomos" class="bg-light">
+    <div class="container">
+        <h2>Quienes Somos</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor culpa quam ducimus quidem repudiandae, omnis eligendi possimus perferendis exercitationem doloribus quaerat corporis tenetur in quis voluptates consectetur, ullam fugiat iusto.
+        </p>
+      </div>
+</section>
 
-</div>
+<section id="servicios">
+    <div  class="container">
+        <h2>Servicios</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque consectetur obcaecati praesentium consequuntur, nobis, quisquam, enim corrupti inventore possimus provident libero ducimus quae atque maiores unde dolores ullam at fugiat.</p>
+      </div>
+</section>
+
+<section id="noticias" class="bg-light">
+    <div class="container">
+        <h2>Noticias</h2>
+      
+      
+        <div class="row">
+          <div class="col-4">
+      
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Chiva Navideña</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam fuga vero minima
+                  provident incidunt illo autem
+                  eveniet! Corporis molestiae distinctio illum optio officiis voluptate, nihil dicta qui? Iste, error illo?</p>
+                <p><strong>Fecha:</strong> 02/12/2018</p>
+                <a href="#" class="btn btn-primary">Ver galeria</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Chiva Navideña</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam fuga vero minima
+                  provident incidunt illo autem
+                  eveniet! Corporis molestiae distinctio illum optio officiis voluptate, nihil dicta qui? Iste, error illo?</p>
+                <p><strong>Fecha:</strong> 02/12/2018</p>
+                <a href="#" class="btn btn-primary">Ver galeria</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Chiva Navideña</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam fuga vero minima
+                  provident incidunt illo autem
+                  eveniet! Corporis molestiae distinctio illum optio officiis voluptate, nihil dicta qui? Iste, error illo?</p>
+                <p><strong>Fecha:</strong> 02/12/2018</p>
+                <a href="#" class="btn btn-primary">Ver galeria</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+</section>
+
+<section id="contacto">
+    <div class="container">
+        <h2>Contacto</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis unde ratione doloremque laudantium nesciunt numquam dolore cum reprehenderit fugiat labore id saepe eius vero modi, vel neque cupiditate, deleniti possimus?
+        </p>
+      </div>
+</section>
+
+
+<footer class="blockquote-footer">
+  <small class="text-muted">
+    Someone famous in <cite title="Source Title">Source Title</cite>
+  </small>
+</footer>
