--- a/src/app/informacion/informacion.component.css
+++ b/src/app/informacion/informacion.component.css
@@ -1,4 +1,24 @@
 .jumbotron {
     background: url("src/assets/portada2.jpeg") no-repeat center center;
     background-size: cover;
-  }
+    position:relative;
+    margin-bottom: 0%;
+}
+
+.container {
+  padding: 1rem;
+}
+
+.jumbotron .container {
+  z-index: 1;
+}
+
+.small {
+  height: 50px;
+}
+
+.dark { 
+  background-color: #000;
+  height: 100%;
+  width: 100%;
+}
