--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-informacion></app-informacion>
+<app-quienes-somos></app-quienes-somos>
+<app-servicios></app-servicios>
+<app-noticias></app-noticias>
+<app-contacto></app-contacto>
+<app-footer-page></app-footer-page>
+
