agregar informacion de fundacion

--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -2,8 +2,10 @@
   <div class="container">
     <h2>Contacto</h2>
     <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis unde ratione doloremque laudantium nesciunt
-      numquam dolore cum reprehenderit fugiat labore id saepe eius vero modi, vel neque cupiditate, deleniti possimus?
+        realizará sus actividades principalmente en la unidad deportiva 
+        Atanasio Girardot, ubicada en la dirección con nomenclatura Carrera 
+        72 # 48-100, Medellín Antioquia. Celular 3146150042.  
+        Correo gacelasmagicascd@gmail.com
     </p>
   </div>
 </section>
