--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -10,9 +10,12 @@
               <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Chiva Navideña</h5>
-                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam fuga vero minima
-                  provident incidunt illo autem
-                  eveniet! Corporis molestiae distinctio illum optio officiis voluptate, nihil dicta qui? Iste, error illo?</p>
+                <p class="card-text">El 02 de Diciembre 2018 realizamos el evento mas lindo del año, CHIVA NAVIDEÑA.
+                   Donde socios deportistas con sus familias compartieron, disfrutaron y celebraron,
+                    de un agradable paseo por la ciudad, disfrutando de los alumbrados, 
+                    rifas, natilla, baile.
+
+                </p>
                 <p><strong>Fecha:</strong> 02/12/2018</p>
                 <a href="#" class="btn btn-primary">Ver galeria</a>
               </div>
