--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -1,6 +1,16 @@
 <section id="servicios">
     <div  class="container">
         <h2>Servicios</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque consectetur obcaecati praesentium consequuntur, nobis, quisquam, enim corrupti inventore possimus provident libero ducimus quae atque maiores unde dolores ullam at fugiat.</p>
+        <p>
+                Las actividades generales de la Fundación serán:
+
+                Fomentar y velar por la práctica del deporte, la recreación y el aprovechamiento del tiempo libre de las personas en condiciones especiales y/o con algún tipo de discapacidad.
+                
+                a) Organizar eventos para sus afiliados y participar en competiciones del deporte asociado,
+                
+                b) Formar parte del Sistema Nacional del Deporte, y
+                
+                c) Promover proyectos y actividades que conduzcan al desarrollo de la actividad deportiva en personas con condiciones especiales y/o algún tipo de discapacidad.
+        </p>
       </div>
 </section>
