--- a/src/app/informacion/informacion.component.html
+++ b/src/app/informacion/informacion.component.html
@@ -17,12 +17,14 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container text-light">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-      featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  </div>
+    <h1 class="display-4">BIENVENIDOS!</h1>
+    <p class="lead">La "FUNDACIÓN GACELAS MÁGICAS ", es un organismo deportivo de derecho privado, 
+      sin ánimo de lucro, constituido por los afiliados deportistas en condiciones especiales,
+      con el fin de fomentar y favorecer la participación e inclusión de las personas con 
+      discapacidad y/o en condiciones especiales, mediante la práctica del deporte, 
+      la recreación y el aprovechamiento del tiempo libre, empleando las modalidades 
+      deportivas e impulsando programas de interés público y social</p>
+    </div>
 </div>
 
 
