--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -1,11 +1,13 @@
 <section id="contacto">
   <div class="container">
     <h2>Contacto</h2>
-    <p>
-        realizará sus actividades principalmente en la unidad deportiva 
-        Atanasio Girardot, ubicada en la dirección con nomenclatura Carrera 
-        72 # 48-100, Medellín Antioquia. Celular 3146150042.  
-        Correo gacelasmagicascd@gmail.com
-    </p>
+    <p>Realizará sus actividades principalmente en la unidad deportiva
+      Atanasio Girardot, ubicada en la dirección con nomenclatura</p>
+    <strong>Dirección: </strong> Carrera 72 # 48-100, Medellín Antioquia 
+    <strong>Celular: </strong> 3146150042
+    <strong>Correo: </strong>gacelasmagicascd@gmail.com
+
+
+
   </div>
 </section>
