--- a/src/app/footer-page/footer-page.component.html
+++ b/src/app/footer-page/footer-page.component.html
@@ -1,6 +1,6 @@
 
 <footer class="blockquote-footer">
     <small class="text-muted">
-      Someone famous in <cite title="Source Title">Source Title</cite>
+      Gacelas Magicas <cite title="Source Title">2019</cite>
     </small>
   </footer>
