--- a/src/app/informacion/informacion.component.css
+++ b/src/app/informacion/informacion.component.css
@@ -1,20 +1,28 @@
 .jumbotron {
   background: url("src/assets/portada2.jpeg") no-repeat center center;
   background-size: cover;
-  position:relative;
+  position: relative;
   margin-bottom: 0%;
 }
 
+.bg {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(87, 93, 77, 0.4);
+  top: 0;
+}
+
 .jumbotron .container {
-z-index: 1;
+  position: relative;
 }
 
 .small {
-height: 50px;
+  height: 50px;
 }
 
-.dark { 
-background-color: #000;
-height: 100%;
-width: 100%;
+.dark {
+  background-color: #000;
+  height: 100%;
+  width: 100%;
 }
