--- a/src/app/informacion/informacion.component.html
+++ b/src/app/informacion/informacion.component.html
@@ -16,18 +16,9 @@
 </nav>
 
 <div class="jumbotron jumbotron-fluid">
+  <div class="bg"></div>
   <div class="container text-light">
     <h1 class="display-4">BIENVENIDOS!</h1>
-    <p class="lead">La "FUNDACIÓN GACELAS MÁGICAS ", es un organismo deportivo de derecho privado, 
-      sin ánimo de lucro, constituido por los afiliados deportistas en condiciones especiales,
-      con el fin de fomentar y favorecer la participación e inclusión de las personas con 
-      discapacidad y/o en condiciones especiales, mediante la práctica del deporte, 
-      la recreación y el aprovechamiento del tiempo libre, empleando las modalidades 
-      deportivas e impulsando programas de interés público y social</p>
-    </div>
+    <p class="lead">Club Gacelas Mágica</p>
+  </div>
 </div>
-
-
-
-
-
