--- a/src/app/quienes-somos/quienes-somos.component.html
+++ b/src/app/quienes-somos/quienes-somos.component.html
@@ -1,8 +1,14 @@
-
 <section id="quienessomos" class="bg-light">
-    <div class="container">
-        <h2>Quienes Somos</h2>
-        <p>
-                  </p>
-      </div>
+  <div class="container">
+    <h2>Quienes Somos</h2>
+    <p>
+      La FUNDACIÓN GACELAS MÁGICAS, es un organismo deportivo de derecho
+      privado, sin ánimo de lucro, constituido por los afiliados deportistas en
+      condiciones especiales, con el fin de fomentar y favorecer la
+      participación e inclusión de las personas con discapacidad y/o en
+      condiciones especiales, mediante la práctica del deporte, la recreación y
+      el aprovechamiento del tiempo libre, empleando las modalidades deportivas
+      e impulsando programas de interés público y social
+    </p>
+  </div>
 </section>
