--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -1,49 +1,53 @@
 <section id="noticias" class="bg-light">
-    <div class="container">
-        <h2>Noticias</h2>
-      
-      
-        <div class="row">
-          <div class="col-4">
-      
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Chiva Navideña</h5>
-                <p class="card-text">El 02 de Diciembre 2018 realizamos el evento mas lindo del año, CHIVA NAVIDEÑA.
-                   Donde socios deportistas con sus familias compartieron, disfrutaron y celebraron,
-                    de un agradable paseo por la ciudad, disfrutando de los alumbrados, 
-                    rifas, natilla, baile.
+  <div class="container">
+    <h2>Noticias</h2>
 
-                </p>
-                <p><strong>Fecha:</strong> 02/12/2018</p>
-                <a href="#" class="btn btn-primary">Ver galeria</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="assets/tarjeta2.jpeg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Festival SPECIAL OLYMPICS</h5>
-                <p class="card-text">En el mes de Octubre estuvimos participando en el evento programado por la SPECIAL OLYMPICS donde todos nuestros socios deportistas obtuvieron medalla por su gran rendimiento deportivo en natación. </p>
-                <p><strong>Fecha:</strong> 02/12/2018</p>
-                <a href="#" class="btn btn-primary">Ver galeria</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-4">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="assets/tarjeta3.jpeg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Eventos 2018</h5>
-                <p class="card-text">En este año estuvimos partivipando en todos los eventos a los que fuimos invitados, como el festival de LIDIMANT, el festival SPECIAL OLYMPICS, juegos INDER ademas de esto realizamos eventos para recolectar fondos: Minitecas, chivas, rifas, etc. </p>
-                <p><strong>Fecha:</strong> 02/12/2018</p>
-                <a href="#" class="btn btn-primary">Ver galeria</a>
-              </div>
-            </div>
+
+    <div class="row">
+      <div class="col-4">
+
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/img1_galeria.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Chiva Navideña</h5>
+            <p class="card-text">El 02 de Diciembre 2018 realizamos el evento mas lindo del año, CHIVA NAVIDEÑA.
+              Donde socios deportistas con sus familias compartieron, disfrutaron y celebraron,
+              de un agradable paseo por la ciudad, disfrutando de los alumbrados,
+              rifas, natilla, baile.
+
+            </p>
+            <p><strong>Fecha:</strong> 02/12/2018</p>
+
           </div>
         </div>
       </div>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/tarjeta2.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Festival SPECIAL OLYMPICS</h5>
+            <p class="card-text">En el mes de Octubre estuvimos participando en el evento programado por la SPECIAL
+              OLYMPICS donde todos nuestros socios deportistas obtuvieron medalla por su gran rendimiento deportivo en
+              natación. </p>
+            <p><strong>Fecha:</strong> 02/12/2018</p>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/tarjeta3.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Eventos 2018</h5>
+            <p class="card-text">En este año estuvimos participando en todos los eventos a los que fuimos invitados,
+              como el festival de LIDIMANT, el festival SPECIAL OLYMPICS, juegos INDER ademas de esto realizamos
+              eventos para recolectar fondos: Minitecas, chivas, rifas, etc. </p>
+            <p><strong>Fecha:</strong> 02/12/2018</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </section>
