--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -1,17 +1,18 @@
 <section id="servicios">
-    <div  class="container">
-        <h2>Servicios</h2>
-        <p>
-                Las actividades generales de la Fundación serán:
+  <div class="container">
+    <h2>Servicios</h2>
+    <p>
+      Las actividades generales de la Fundación serán:
+    </p>
 
-            
-                Fomentar y velar por la práctica del deporte, la recreación y el aprovechamiento del tiempo libre de las personas en condiciones especiales y/o con algún tipo de discapacidad.
-                
-                a) Organizar eventos para sus afiliados y participar en competiciones del deporte asociado,
-                
-                b) Formar parte del Sistema Nacional del Deporte, y
-                
-                c) Promover proyectos y actividades que conduzcan al desarrollo de la actividad deportiva en personas con condiciones especiales y/o algún tipo de discapacidad.
-        </p>
-      </div>
+    <ol type="a">
+      <li>Fomentar y velar por la práctica del deporte, la recreación y el aprovechamiento del tiempo libre de las
+        personas
+        en condiciones especiales y/o con algún tipo de discapacidad.</li>
+      <li>Organizar eventos para sus afiliados y participar en competiciones del deporte asociado</li>
+      <li>Formar parte del Sistema Nacional del Deporte</li>
+      <li>Promover proyectos y actividades que conduzcan al desarrollo de la actividad deportiva en personas con
+        condiciones especiales y/o algún tipo de discapacidad.</li>
+    </ol>
+  </div>
 </section>
